<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.james.morsecoder.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTextPlain"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text=""
        tools:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextMorse"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text=""
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        tools:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:onClick="PlaceBack"
        android:text="@string/delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpaceBtn" />

    <Button
        android:id="@+id/SpaceBtn"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginTop="54dp"
        android:onClick="PlaceSpace"
        android:text="@string/space"
        app:layout_constraintTop_toBottomOf="@+id/editTextMorse"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/DotButton"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="54dp"
        android:onClick="PlaceDot"
        android:text="@string/dih"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/SpaceBtn"
        app:layout_constraintTop_toBottomOf="@+id/editTextMorse" />

    <Button
        android:id="@+id/DahButton"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="54dp"
        android:onClick="PlaceDah"
        android:text="@string/dah"
        app:layout_constraintLeft_toRightOf="@+id/SpaceBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMorse" />

    <ToggleButton
        android:id="@+id/toggle_record"
        android:layout_width="117dp"
        android:layout_height="71dp"
        android:checked="false"
        android:textOff="@string/record_button"
        android:textOn="@string/stop_record_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/plain_text"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/toggle_record"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/morse_text"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlain"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/morsePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginRight="8dp"
        android:onClick="PlayMorse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editText4"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlain"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
